fix(UI): Fix amount the main screen moves back in 3D space on mobile when opening the sidebar

--- a/app/src/ui/components/OffCanvas/OffCanvas.css
+++ b/app/src/ui/components/OffCanvas/OffCanvas.css
@@ -49,10 +49,10 @@
     }
 
     &:has(.offcanvas-backdrop) main {
-        transform: perspective(100px) translateZ(-5px);
+        transform: perspective(1000px) translateZ(-5px);
     }
 
     &:has(.offcanvas-backdrop[data-exiting]) main {
-        transform: perspective(100px) translateZ(0px);
+        transform: perspective(1000px) translateZ(0px);
     }
 }
